--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
   <!-- your app's script -->
 
   <script src="js/app.js"></script>
-  <script src="js/authService.js"></script>
+  <script src="js/authservice.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/common.js"></script>
 </head>
